// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Limiter /> renders as large 1`] = `
<div
  className="sc-htpNat kekqhI"
>
  Child text
</div>
`;

exports[`<Limiter /> renders as medium 1`] = `
<div
  className="sc-bwzfXH IugaC"
>
  Child text
</div>
`;

exports[`<Limiter /> renders as small 1`] = `
<div
  className="sc-bdVaJa fQxbRi"
>
  Child text
</div>
`;

exports[`<Limiter /> renders correctly 1`] = `
<div
  className="sc-bwzfXH IugaC"
>
  Child text
</div>
`;
